# ChangeLog for media-libs/paragui
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/paragui/Attic/ChangeLog,v 1.13 2004/06/24 23:18:59 agriffis Exp $

  26 Dec 2003; Jason Wever <weeve@gentoo.org> paragui-1.0.3.ebuild:
  Changed sparc keyword to ~sparc as the dev-games/physfs had absolutely no
  sparc keywords.

*paragui-1.0.4 (02 Sep 2003)

  02 Sep 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump + remove internal physicfs since it overwrites real physicfs.

*paragui-1.0.3 (14 Jan 2003)

  02 Sep 2003; Mike Frysinger <vapier@gentoo.org> :
  Remove internal physicfs since it overwrites real physicfs.

  14 Jan 2003; Daniel Robbins <drobbins@gentoo.org>: closes bug #13909; enabled
  internal physicFS since external lib is still masked, and this version
  apparently fixes some build issues. Thanks to Guillaume Schmid for this bug
  report.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*paragui-1.0.2 (9 May 2002) 

  9 Jul 2002; Ryan Phillips <rphillips@gentoo.org> paragui-1.0.2.ebuild :

  New version

*paragui-1.0.1-r1 (2 May 2002) 

  19 May 2002; Ryan Phillips <rphillips@gentoo.org> paragui-1.0.1-r1.ebuild :

  Added expat dependency

  02 May 2002; Spider <spider@gentoo.org> paragui-1.0.1-r1.ebuild
  Fix a missing S= 

*paragui-1.0.1 (28 Apr 2002)

  28 Apr 2002; Ryan Phillips <rphillips@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.
