@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/paragui
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/paragui/Attic/ChangeLog,v 1.13 2004/06/24 23:18:59 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/paragui/Attic/ChangeLog,v 1.14 2004/07/14 02:13:10 vapier Exp $
+
+*paragui-1.1.7 (13 Jul 2004)
+
+  13 Jul 2004; Mike Frysinger <vapier@gentoo.org> paragui-1.0.4.ebuild,
+  +paragui-1.1.7.ebuild:
+  Version bump #56117 by Kostko.
 
   26 Dec 2003; Jason Wever <weeve@gentoo.org> paragui-1.0.3.ebuild:
   Changed sparc keyword to ~sparc as the dev-games/physfs had absolutely no
